--- a/scss/home/home.scss
+++ b/scss/home/home.scss
@@ -498,7 +498,7 @@
 
         .form {
             width: 90%;
-            background-color: chocolate;
+            // background-color: chocolate;
             margin: auto;
 
             .padding1 {
@@ -650,39 +650,42 @@
                 // align-items: center;
                 // justify-content: left;
                 margin-bottom: 20px;
-                background-color: burlywood;
+                // background-color: burlywood;
                 
                 .adults {
+                    width: 250px;
                     display: flex;
                     align-items: center;
-                    // justify-content: space-between;
+                    justify-content: space-between;
                     margin-left: 0px;
                     margin-bottom: 10px;
-                    background-color: cadetblue;
+                    // background-color: cadetblue;
                 }
     
                 .children {
+                    width: 250px;
                     display: flex;
                     align-items: center;
                     justify-content: space-between;
                     margin-left: 0;
                     margin-bottom: 10px;
-                    background-color: cadetblue;
+                    // background-color: cadetblue;
 
                 }
     
                 .rooms {
+                    width: 250px;
                     display: flex;
                     align-items: center;
                     justify-content: space-between;
                     margin-left: 0;
-                    background-color: cadetblue;
+                    // background-color: cadetblue;
 
                 }
     
             }
     
-       .message {
+        .message {
             width: 100%;
             height: 192px;
             padding-top: 20px;
